--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casamento</title>
+    <title>Pedido de Namoro</title>
     <style>
         
         body {
@@ -53,7 +53,7 @@
 <body>
 
     <div class="painel">
-        <h1>Nanda</h1>
+        <h1>Fernanda</h1>
         <img src="https://media1.tenor.com/images/645b93ea8ebcdeaa12805e6f94060e9e/tenor.gif?itemid=14645087" alt="">
         <h3>Quer namorar comigo?</h3>
         <button id="sim"> SIM </button>
